--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -7,7 +7,7 @@
       <div class="col-12">
         <div class="row all-fet">
           <div class="col-md-3">
-            <img src="../../assets/imgs/feature-img/1.jpeg" class="img-fluid" alt="">
+            <img src="assets/imgs/feature-img/1.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-md-3">
             <div class="feature-content">
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <img src="../../assets/imgs/feature-img/2.jpeg" class="img-fluid" alt="">
+            <img src="assets/imgs/feature-img/2.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-md-3">
             <div class="feature-content">
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <img src="../../assets/imgs/feature-img/3.jpeg" class="img-fluid" alt="">
+            <img src="assets/imgs/feature-img/3.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-md-3">
             <div class="feature-content">
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <img src="../../assets/imgs/feature-img/4.jpeg" class="img-fluid" alt="">
+            <img src="assets/imgs/feature-img/4.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-md-3">
             <div class="feature-content">
