--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -6,7 +6,7 @@
         <p>Nulla aperiam alias ut eligendi rem vel repellat rerum hic nostrum facilis!</p>
       </div>
       <div class="col-12 text-center">
-        <img src="../../assets/imgs/5.jpg" class="img-fluid" alt="">
+        <img src="assets/imgs/5.jpg" class="img-fluid" alt="">
       </div>
     </div>
   </div>
